include_directories(..)

add_executable(ls ls.cpp)
if(NOT WIN32)
add_executable(msh msh.cpp)
endif(NOT WIN32)
add_executable(reflection reflection-example.cpp)
add_executable(video-test video-test.cpp)

target_link_libraries(ls mlib)
if(NOT WIN32)
target_link_libraries(msh mlib)
endif(NOT WIN32)
target_link_libraries(reflection mlib)
target_link_libraries(video-test mlib xkbcommon)
